--- a/src/app/modules/admin/dashboards/project/project.component.html
+++ b/src/app/modules/admin/dashboards/project/project.component.html
@@ -209,7 +209,7 @@
                                 </div>
                             </div>
                             <!-- Github issues summary -->
-                            <div class="sm:col-span-2 md:col-span-4 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
+                             <!-- <div class="sm:col-span-2 md:col-span-4 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex flex-col sm:flex-row items-start justify-between">
                                     <div class="text-lg font-medium tracking-tight leading-6 truncate">Github Issues Summary</div>
                                     <div class="mt-3 sm:mt-0 sm:ml-2">
@@ -221,9 +221,9 @@
                                         </mat-button-toggle-group>
                                     </div>
                                 </div>
-                                <div class="grid grid-cols-1 lg:grid-cols-2 grid-flow-row gap-6 w-full mt-8 sm:mt-4">
+                                <div class="grid grid-cols-1 lg:grid-cols-2 grid-flow-row gap-6 w-full mt-8 sm:mt-4">-->
                                     <!-- New vs. Closed -->
-                                    <div class="flex flex-col flex-auto">
+                                      <!--<div class="flex flex-col flex-auto">
                                         <div class="font-medium text-secondary">New vs. Closed</div>
                                         <div class="flex flex-col flex-auto">
                                             <apx-chart
@@ -242,59 +242,59 @@
                                                 [xaxis]="chartGithubIssues.xaxis"
                                                 [yaxis]="chartGithubIssues.yaxis"></apx-chart>
                                         </div>
-                                    </div>
+                                    </div>-->
                                     <!-- Overview -->
-                                    <div class="flex flex-col">
+                                    <!--<div class="flex flex-col">
                                         <div class="font-medium text-secondary">Overview</div>
-                                        <div class="flex-auto grid grid-cols-4 gap-4 mt-6">
+                                        <div class="flex-auto grid grid-cols-4 gap-4 mt-6"> -->
                                             <!-- New issues -->
-                                            <div class="col-span-2 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-indigo-50 text-indigo-800 dark:bg-white dark:bg-opacity-5 dark:text-indigo-400">
+                                            <!-- <div class="col-span-2 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-indigo-50 text-indigo-800 dark:bg-white dark:bg-opacity-5 dark:text-indigo-400">
                                                 <div class="text-5xl sm:text-7xl font-semibold leading-none tracking-tight">
                                                     {{data.githubIssues.overview[githubIssuesWeekSelector.value]['new-issues']}}
                                                 </div>
                                                 <div class="mt-1 text-sm sm:text-lg font-medium">New Issues</div>
-                                            </div>
+                                            </div>-->
                                             <!-- Closed -->
-                                            <div class="col-span-2 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-green-50 text-green-800 dark:bg-white dark:bg-opacity-5 dark:text-green-500">
+                                           <!-- <div class="col-span-2 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-green-50 text-green-800 dark:bg-white dark:bg-opacity-5 dark:text-green-500">
                                                 <div class="text-5xl sm:text-7xl font-semibold leading-none tracking-tight">
                                                     {{data.githubIssues.overview[githubIssuesWeekSelector.value]['closed-issues']}}
                                                 </div>
                                                 <div class="mt-1 text-sm sm:text-lg font-medium">Closed</div>
-                                            </div>
+                                            </div> -->
                                             <!-- Fixed -->
-                                            <div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
+                                           <!-- <div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
                                                 <div class="text-5xl font-semibold leading-none tracking-tight">
                                                     {{data.githubIssues.overview[githubIssuesWeekSelector.value]['fixed']}}
                                                 </div>
                                                 <div class="mt-1 text-sm font-medium text-center">Fixed</div>
-                                            </div>
+                                            </div> -->
                                             <!-- Won't fix -->
-                                            <div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
+                                            <!--<div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
                                                 <div class="text-5xl font-semibold leading-none tracking-tight">
                                                     {{data.githubIssues.overview[githubIssuesWeekSelector.value]['wont-fix']}}
                                                 </div>
                                                 <div class="mt-1 text-sm font-medium text-center">Won't Fix</div>
-                                            </div>
+                                            </div>-->
                                             <!-- Re-opened -->
-                                            <div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
+                                            <!--<div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
                                                 <div class="text-5xl font-semibold leading-none tracking-tight">
                                                     {{data.githubIssues.overview[githubIssuesWeekSelector.value]['re-opened']}}
                                                 </div>
                                                 <div class="mt-1 text-sm font-medium text-center">Re-opened</div>
-                                            </div>
+                                            </div>-->
                                             <!-- Needs triage -->
-                                            <div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
+                                           <!--<div class="col-span-2 sm:col-span-1 flex flex-col items-center justify-center py-8 px-1 rounded-2xl bg-gray-100 text-secondary dark:bg-white dark:bg-opacity-5">
                                                 <div class="text-5xl font-semibold leading-none tracking-tight">
                                                     {{data.githubIssues.overview[githubIssuesWeekSelector.value]['needs-triage']}}
-                                                </div>
+                                                </div> 
                                                 <div class="mt-1 text-sm font-medium text-center">Needs Triage</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                             <!-- Task distribution -->
-                            <div class="sm:col-span-2 md:col-span-4 lg:col-span-2 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
+                             <!-- <div class="sm:col-span-2 md:col-span-4 lg:col-span-2 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex flex-col sm:flex-row items-start justify-between">
                                     <div class="text-lg font-medium tracking-tight leading-6 truncate">Task Distribution</div>
                                     <div class="mt-3 sm:mt-0 sm:ml-2">
@@ -334,9 +334,9 @@
                                         <div class="mt-1 text-center text-secondary">Completed tasks</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- Schedule -->
-                            <div class="sm:col-span-2 md:col-span-4 lg:col-span-2 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
+                           <!-- <div class="sm:col-span-2 md:col-span-4 lg:col-span-2 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex flex-col sm:flex-row items-start justify-between">
                                     <div class="text-lg font-medium tracking-tight leading-6 truncate">Schedule</div>
                                     <div class="mt-3 sm:mt-0 sm:ml-2">
@@ -378,7 +378,7 @@
                                         </div>
                                     </ng-container>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </ng-template>
                 </mat-tab>
