--- a/src/app/modules/admin/dashboards/project/project.component.html
+++ b/src/app/modules/admin/dashboards/project/project.component.html
@@ -13,35 +13,35 @@
                     </div>
                     <div class="flex flex-col min-w-0 ml-4">
                         <ng-container *transloco="let t">
-                            <div class="text-2xl md:text-5xl font-semibold tracking-tight leading-7 md:leading-snug truncate">{{t('welcome-back')}}, Brian!</div>
+                            <div class="text-2xl md:text-5xl font-semibold tracking-tight leading-7 md:leading-snug truncate">{{t('Bonjour Gaelle')}}!</div>
                         </ng-container>
                         <div class="flex items-center">
-                            <mat-icon
+                           <!-- <mat-icon
                                 class="icon-size-5"
-                                [svgIcon]="'heroicons_solid:bell'"></mat-icon>
-                            <div class="ml-1.5 leading-6 truncate text-secondary">You have 2 new messages and 15 new tasks</div>
+                                [svgIcon]="'heroicons_solid:bell'"></mat-icon>-->
+                            <div class="ml-1.5 leading-6 truncate text-secondary"></div>
                         </div>
                     </div>
                 </div>
                 <!-- Actions -->
                 <div class="flex items-center mt-6 sm:mt-0 sm:ml-2 space-x-3">
-                    <button
+                  <!--   <button
                         class="bg-accent"
                         mat-flat-button
                         [color]="'accent'">
                         <mat-icon
                             class="icon-size-5"
                             [svgIcon]="'heroicons_solid:envelope'"></mat-icon>
-                        <span class="ml-2">Messages</span>
-                    </button>
-                    <button
+                       <span class="ml-2">Messages</span> 
+                    </button> -->
+                 <!--   <button
                         mat-flat-button
                         [color]="'primary'">
                         <mat-icon
                             class="icon-size-5"
                             [svgIcon]="'heroicons_solid:cog-8-tooth'"></mat-icon>
                         <span class="ml-2">Settings</span>
-                    </button>
+                    </button> -->
                 </div>
             </div>
             <!-- Project selector -->
@@ -99,9 +99,9 @@
                             <!-- Summary -->
                             <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex items-start justify-between">
-                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Summary</div>
+                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Créer</div>
                                     <div class="ml-2 -mt-2 -mr-3">
-                                        <button
+                                       <!--  <button
                                             mat-icon-button
                                             [matMenuTriggerFor]="summaryMenu">
                                             <mat-icon
@@ -112,52 +112,26 @@
                                             <button mat-menu-item>Yesterday</button>
                                             <button mat-menu-item>2 days ago</button>
                                             <button mat-menu-item>3 days ago</button>
-                                        </mat-menu>
+                                        </mat-menu>-->
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-center mt-2">
                                     <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-blue-500">21</div>
-                                    <div class="text-lg font-medium text-blue-600 dark:text-blue-500">Due Tasks</div>
+                                    <div class="text-lg font-medium text-blue-600 dark:text-blue-500">Quizz</div>
                                     <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
-                                        <div class="text-md font-medium truncate">Completed:</div>
-                                        <div class="ml-1.5 text-lg font-semibold">13</div>
+                                        <div class="text-md font-medium truncate"></div>
+                                        <div class="ml-1.5 text-lg font-semibold"></div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- Overdue -->
-                            <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
-                                <div class="flex items-start justify-between">
-                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Overdue</div>
-                                    <div class="ml-2 -mt-2 -mr-3">
-                                        <button
-                                            mat-icon-button
-                                            [matMenuTriggerFor]="overdueMenu">
-                                            <mat-icon
-                                                class="icon-size-5"
-                                                [svgIcon]="'heroicons_mini:ellipsis-vertical'"></mat-icon>
-                                        </button>
-                                        <mat-menu #overdueMenu="matMenu">
-                                            <button mat-menu-item>Yesterday</button>
-                                            <button mat-menu-item>2 days ago</button>
-                                            <button mat-menu-item>3 days ago</button>
-                                        </mat-menu>
-                                    </div>
-                                </div>
-                                <div class="flex flex-col items-center mt-2">
-                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-red-500">17</div>
-                                    <div class="text-lg font-medium text-red-600 dark:text-red-500">Tasks</div>
-                                    <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
-                                        <div class="text-md font-medium truncate">From yesterday:</div>
-                                        <div class="ml-1.5 text-lg font-semibold">9</div>
-                                    </div>
-                                </div>
-                            </div>
+                            
+                            
                             <!-- Issues -->
                             <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex items-start justify-between">
-                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Issues</div>
+                                    <div class="text-lg font-medium tracking-tight leading-6 truncate"> En cours</div>
                                     <div class="ml-2 -mt-2 -mr-3">
-                                        <button
+                                     <!--   <button
                                             mat-icon-button
                                             [matMenuTriggerFor]="issuesMenu">
                                             <mat-icon
@@ -168,24 +142,24 @@
                                             <button mat-menu-item>Yesterday</button>
                                             <button mat-menu-item>2 days ago</button>
                                             <button mat-menu-item>3 days ago</button>
-                                        </mat-menu>
+                                        </mat-menu> -->
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-center mt-2">
                                     <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-amber-500">24</div>
-                                    <div class="text-lg font-medium text-amber-600 dark:text-amber-500">Open</div>
+                                    <div class="text-lg font-medium text-amber-600 dark:text-amber-500">Quizz</div>
                                     <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
-                                        <div class="text-md font-medium truncate">Closed today:</div>
-                                        <div class="ml-1.5 text-lg font-semibold">19</div>
+                                        <div class="text-md font-medium truncate"></div>
+                                        <div class="ml-1.5 text-lg font-semibold"></div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- Features -->
+                             <!-- Features -->
                             <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                                 <div class="flex items-start justify-between">
-                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Features</div>
+                                    <div class="text-lg font-medium tracking-tight leading-6 truncate">Succès</div>
                                     <div class="ml-2 -mt-2 -mr-3">
-                                        <button
+                                       <!-- <button
                                             mat-icon-button
                                             [matMenuTriggerFor]="featuresMenu">
                                             <mat-icon
@@ -196,15 +170,43 @@
                                             <button mat-menu-item>Yesterday</button>
                                             <button mat-menu-item>2 days ago</button>
                                             <button mat-menu-item>3 days ago</button>
-                                        </mat-menu>
+                                        </mat-menu>-->
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-center mt-2">
                                     <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-green-500">38</div>
-                                    <div class="text-lg font-medium text-green-600 dark:text-green-500">Proposals</div>
+                                    <div class="text-lg font-medium text-green-600 dark:text-green-500">Quizz</div>
                                     <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
-                                        <div class="text-md font-medium truncate">Implemented:</div>
-                                        <div class="ml-1.5 text-lg font-semibold">16</div>
+                                        <div class="text-md font-medium truncate"></div>
+                                        <div class="ml-1.5 text-lg font-semibold"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Overdue -->
+                            <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
+                                <div class="flex items-start justify-between">
+                                    <div class="text-lg font-medium tracking-tight leading-6 truncate"> Échec</div>
+                                    <div class="ml-2 -mt-2 -mr-3">
+                                        <!--  <button
+                                            mat-icon-button
+                                            [matMenuTriggerFor]="overdueMenu">
+                                            <mat-icon
+                                                class="icon-size-5"
+                                                [svgIcon]="'heroicons_mini:ellipsis-vertical'"></mat-icon>
+                                        </button>
+                                         <mat-menu #overdueMenu="matMenu">
+                                             <button mat-menu-item>Yesterday</button>
+                                            <button mat-menu-item>2 days ago</button>
+                                            <button mat-menu-item>3 days ago</button>
+                                        </mat-menu>-->
+                                    </div>
+                                </div>
+                                <div class="flex flex-col items-center mt-2">
+                                    <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-red-500">17</div>
+                                    <div class="text-lg font-medium text-red-600 dark:text-red-500">Quizz</div>
+                                    <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
+                                        <div class="text-md font-medium truncate"></div>
+                                        <div class="ml-1.5 text-lg font-semibold"></div>
                                     </div>
                                 </div>
                             </div>
@@ -340,7 +342,7 @@
                                 <div class="flex flex-col sm:flex-row items-start justify-between">
                                     <div class="text-lg font-medium tracking-tight leading-6 truncate">Schedule</div>
                                     <div class="mt-3 sm:mt-0 sm:ml-2">
-                                        <mat-button-toggle-group
+                                       <mat-button-toggle-group
                                             value="today"
                                             #scheduleDaySelector="matButtonToggleGroup">
                                             <mat-button-toggle value="today">Today</mat-button-toggle>
